--- a/reports/refs.bib
+++ b/reports/refs.bib
@@ -1,3 +1,20 @@
+@inproceedings{danos2012graphs,
+  title={Graphs, rewriting and pathway reconstruction for rule-based models},
+  author={Danos, Vincent and Feret, J{\'e}r{\^o}me and Fontana, Walter and
+Harmer, Russell and Hayman, Jonathan and Krivine, Jean and Thompson-Walsh, Chris
+and Winskel, Glynn},
+  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  volume={18},
+  year={2012},
+  organization={Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+}
+
+@misc{maude,
+    title = {Maude Overview},
+    year = {2014},
+    note = {\url{http://maude.cs.illinois.edu/w/index.php?title=Maude_Overview}}
+}
+
 @inproceedings{jijkoun2007learning,
   title={Learning to transform linguistic graphs},
   author={Jijkoun, Valentin and De Rijke, Maarten and others},
